makes links on index bolder

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,11 +33,12 @@ li a{
 }
 
 li{
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .transparent-light{
   background:rgba(255,255,255,0.6);
+  font-weight: 900;
 }
 
 .transparent-dark{
