--- a/css/game.css
+++ b/css/game.css
@@ -4,6 +4,10 @@ body{
   font-family: 'Lato', sans-serif;
 }
 
+.row{
+  margin-top: 15px;
+}
+
 .center{
   text-align: center;
 }
@@ -11,6 +15,7 @@ body{
 .question{
   padding: 9px 5px;
   border-radius: 7px;
+  border: 1px solid #fff;
   background-color: #000;
 }
 
